# farol

./: .gitignore  .gitmodules  404.html  Jenkinsfile  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: codeql.yml
Waypoint/: index.html
Waypoint/sendWpType1/: index.html
Waypoint/waypoint/: index.html
acoustic-vehicle-state-broadcaster/: index.html
acoustic-vehicle-state-broadcaster/gnss2state/: index.html
auv-simulation/: index.html
bringup-system/: index.html
bringup-system/farol_bringup/: index.html
comms-ros-messages/: index.html
console-path-parser/: index.html
console-path-parser/console_path_parser/: index.html
cooperative-path-following/: index.html
cooperative-path-following/cpf_control/: index.html
cooperative-path-following/implementation/: index.html
cpf-gamma/: index.html
cpf-gamma/cpf_wifi_client/: index.html
cpf-gamma/cpf_wifi_server/: index.html
data-serializer/: index.html
data-serializer/data_serializer/: index.html
docs/: docker-compose.yaml  ignore_packages_doxygen.txt  index.md
docs/pages/: Acknowledgments.md  (+1 more)
dsor-paths/: index.html
dsor-ros-messages/: index.html
dsor-utility-functions/: index.html
evo-tools/: index.html
farol-docker/: index.html
farol-docker-metapackage/: index.html
farol-gimmicks-library/: index.html
farol-navigation/: index.html
farol-ros-messages/: index.html
farol-scripts/: index.html
farol_addons/farol_docker/farol_docker/: CMakeLists.txt  mkdocs.yml  package.xml
farol_addons/farol_docker/farol_docker/doc/: README.md
farol_addons/farol_docker/farol_docker/docs/: README.md
farol_addons/mission_planner/: CMakeLists.txt  LICENSE  README.md  package.xml
farol_addons/mission_planner/config/: config_mission_planner.yaml
farol_addons/mission_planner/docs/: README.md  mission_planner.md
farol_addons/mission_planner/include/mission_planner_algorithms/: MissionPlannerAlgorithm.h
farol_addons/mission_planner/include/mission_planner_ros/: MissionPlannerNode.h
farol_addons/mission_planner/launch/: mission_planner.launch
farol_addons/mission_planner/msg/: mGsnifferData.msg  mInterestZone.msg  mMissionStartedAck.msg  mNewIZMission.msg
farol_addons/mission_planner/src/mission_planner_algorithms/: MissionPlannerAlgorithm.cpp
farol_addons/mission_planner/src/mission_planner_ros/: MissionPlannerNode.cpp
farol_addons/mission_planner/srv/: Configs.srv  InterestZone.srv
farol_bringup/: CMakeLists.txt  mkdocs.yml  package.xml  setup.py
farol_comms/comms_acoustic/interrogation_scheme/: CMakeLists.txt  mkdocs.yml  package.xml
farol_comms/comms_acoustic/interrogation_scheme/docs/: README.md  pinger.md  replier.md
farol_comms/comms_acoustic/interrogation_scheme/include/pinger_ros/: PingerNode.h
farol_comms/comms_acoustic/interrogation_scheme/include/replier_ros/: ReplierNode.h
farol_comms/comms_acoustic/interrogation_scheme/include/silent_ros/: SilentNode.h
farol_comms/comms_acoustic/interrogation_scheme/msg/: StartSilent.msg
farol_comms/comms_acoustic/interrogation_scheme/src/pinger_ros/: PingerNode.cpp
farol_comms/comms_acoustic/interrogation_scheme/src/replier_ros/: ReplierNode.cpp
farol_comms/comms_acoustic/interrogation_scheme/src/silent_ros/: SilentNode.cpp
farol_docking/: CMakeLists.txt  mkdocs.yml  package.xml
farol_docking/config/: docking_config.yaml
farol_docking/controller/include/: DockingController.h  DockingControllerNode.h
farol_docking/controller/src/: DockingController.cpp  DockingControllerNode.cpp
farol_docking/docs/: README.md
farol_docking/filter/include/: DockingFilterNode.h  DockingHFilter.h  DockingRFilter.h  DockingVFilter.h
farol_docking/filter/src/: DockingFilterNode.cpp  DockingHFilter.cpp  DockingRFilter.cpp  DockingVFilter.cpp
farol_docking/include/farol_docking/controller/: docking_controller.hpp  docking_controller_node.hpp
farol_docking/include/farol_docking/filter/: docking_filter.hpp  docking_filter_node.hpp
farol_docking/include/farol_docking/inner_loops/: controller_base.hpp  inner_loops_node.hpp  pid.hpp  smc.hpp
farol_docking/include/farol_docking/outer_loop/: outer_loop.hpp  outer_loop_node.hpp  path_following.hpp
farol_docking/include/farol_docking/utils/: docking_utils.hpp  logging_utils.hpp  median_utils.hpp  outlier_rejector.hpp
farol_docking/launch/: docking.launch
farol_docking/msg/: ControllerDebug.msg  FilterDebug.msg  Reference3.msg  dState.msg
farol_docking/scripts/: docking_helper.py  plotter.py
farol_docking/src/controller/: docking_controller.cpp  docking_controller_node.cpp
farol_docking/src/filter/: docking_filter.cpp  docking_filter_node.cpp
farol_docking/src/inner_loops/: inner_loops_node.cpp  pid.cpp  smc.cpp
farol_docking/src/outer_loop/: outer_loop.cpp  outer_loop_node.cpp  path_following.cpp
farol_docking/utils/: mock_usbl.py  usbl_splitter.py
farol_docking/utils/include/: docking_utils.h
farol_docking/utils/src/: docking_utils.cpp
farol_msgs/: CMakeLists.txt  mkdocs.yml  package.xml
farol_nav/cf/: CMakeLists.txt  package.xml
farol_nav/cf/config/: config_cf.yaml
farol_nav/cf/docs/: README.md
farol_nav/cf/include/cf_algorithms/: CfAlgorithm.h
farol_nav/cf/include/cf_ros/: CfNode.h
farol_nav/cf/launch/: cf.launch
farol_nav/cf/msg/: Tuning.msg
farol_nav/cf/src/cf_algorithms/: CfAlgorithm.cpp
farol_nav/cf/src/cf_ros/: CfNode.cpp
farol_nav/ckf/: CMakeLists.txt  package.xml
farol_nav/ckf/docs/: README.md
farol_nav/ckf/include/ckf_algorithms/: CkfAlgorithm.h
farol_nav/ckf/include/ckf_ros/: CkfNode.h
farol_nav/ckf/launch/: ckf.launch
farol_nav/ckf/src/ckf_algorithms/: CkfAlgorithm.cpp
farol_nav/ckf/src/ckf_ros/: CkfNode.cpp
http-server/: index.html
interrogation-scheme/: index.html
nav-tools/: index.html
open-loop-control/: index.html
path-following/: index.html
pid-inner-loops/: index.html
remote-controller/: index.html
search/: search_index.json
sensor-fusion-kalman-filter/: index.html
sensors-simulation/: index.html
static-thruster-allocation/: index.html
vehicle-stabilizer/: index.html
(+723 files in other folders)
