<?xml version="1.0"?>
<package format="2">
 <name>farol_docking</name>
 <version>1.0.0</version>
 <description>
Code to perform autonomous docking of medusa AUV
 </description>

 <license>MIT</license>

 <author email="ravi.regalo@tecnico.ulisboa.pt">RaviRegalo</author>
 <maintainer email="ravi.regalo@tecnico.ulisboa.pt">RaviRegalo</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <!-- Add here ROS dependencies -->
 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>cmake_modules</build_depend>

 <!-- <build_depend>message_generation</build_depend>
 <exec_depend>message_runtime</exec_depend> -->
 <depend>message_generation</depend>
 <depend>message_runtime</depend> 

 <depend>std_msgs</depend>
 <depend>tf2_geometry_msgs</depend>
 <depend>roscpp</depend>
 <depend>geographiclib-tools</depend>
 <depend>geographiclib</depend>
 <depend>auv_msgs</depend>
 <depend>farol_msgs</depend>
 <depend>gazebo_msgs</depend>
 <depend>dsor_msgs</depend>
 <depend>farol_gimmicks_library</depend>
 <depend>tf2</depend>
 <depend>tf2_ros</depend>

</package>
